Fix alignment of post heading in post layout.

--- a/app/_scss/post.scss
+++ b/app/_scss/post.scss
@@ -1,9 +1,17 @@
-.post {
-	padding: 20px 0;
-	max-width: 800px;
-	margin-left: auto;
-	margin-right: auto;
-	p {
-		font-size: 16px;
+.post-container{
+	.post-heading {
+		max-width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.post {
+		padding: 20px 0;
+		max-width: 800px;
+		margin-left: auto;
+		margin-right: auto;
+		p {
+			font-size: 16px;
+		}
 	}
 }
